# LanguageLearning

./: .gitignore  LICENSE  README.md  dev-codex-prompts.md  docker-compose.yml  live-index.html  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  README.md  dev-codex-prompt.md  index.ts  package-lock.json  package.json  tsconfig.json
backend/services/analytics/: index.ts
backend/services/auth/: index.ts
backend/services/goal/: index.ts
backend/services/lesson/: index.ts
backend/services/media/: index.ts
css/: index.css
docs/: DEVELOPMENT.md  FluentMilestoneGuidelines.md  GOALSPEAK.md  STYLE_GUIDE.md
frontend/: .env.example  Dockerfile  README.md  dev-codex-prompt.md  index.html  index.html.bak  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.jsx  index.css
infra/: .terraform.lock.hcl  README.md  acm-validation.json  dev-codex-prompt.md  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
js/: index.js
mobile/: dev-codex-prompt.md
src/language_learning/: __init__.py  ai_blurbs.py  ai_lessons.py  api.py  coca.csv  dev-codex-prompt.md  entrypoints.py  goals.py  media_integration.py  spaced_repetition.py  storage.py  tutor.py  vocabulary.py
tests/: test_ai_blurbs.py  test_ai_lessons.py  test_api.py  test_goals.py  test_media_integration.py  test_package.py  test_service_endpoints.py  test_spaced_repetition.py  test_storage.py  test_stylesheet_urls.py  test_tutor.py  test_vocabulary.py
(+40 files in other folders)
