[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "language-learning"
version = "0.1.0"
description = "LanguageLearning core modules"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "nltk>=3.8",
    "spacy>=3.7",
    "requests>=2.31",
    "pytest>=7.4",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["language_learning"]
include-package-data = true

[tool.setuptools.package-data]
"language_learning" = ["coca.csv"]
